# macors

./: Cargo.toml  README.md  justfile
src/: config.rs  macors.rs  main.rs
