[package]
name = "macors"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = {version = "0.5.3", features = ["serialize"]}
clap = {version = "4.5.31", features = ["derive"]}
config = { version = "0.15.6", features = ["toml", "convert-case"] }
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.97"
home = "0.5.11"
actually_beep = "0.1.1"
device_query = "3.0.0"
